--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -265,6 +265,7 @@
                     width: 20px;
                     height: 20px;
                     background: url(../img/svg/call.svg) center/contain no-repeat;
+                    transition: all 0s;
                 }
                 span {
                     display: none;
