--- a/#src/scss/news.scss
+++ b/#src/scss/news.scss
@@ -255,12 +255,23 @@
     }
 }
 .promos-p {
+    .promo-block {
+        min-height: 340px;
+        padding-left: 60px;
+        padding-right: 60px;
+        border-radius: 20px;
+        border: 1px solid var(--border-color-green);
+    }
     &__items {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 40px 20px;
     }
     @media (max-width: $bp1) {
+        .promo-block {
+            min-height: 281px;
+            border-radius: 16px;
+        }
         &__items {
             gap: 40px 16px;
         }
@@ -279,7 +290,25 @@
             }
         }
     }
+    @media (max-width: $bp2) {
+        .promo-block {
+            min-height: 237px;
+            padding-left: 40px;
+            padding-right: 40px;
+            &::after {
+                height: 100%;
+                opacity: 0.6;
+            }
+            &__content {
+                max-width: 60%;
+            }
+        }
+    }
     @media (max-width: $bp4) {
+        .promo-block {
+            padding-left: var(--container-offset);
+            padding-right: var(--container-offset);
+        }
         &__items {
             grid-template-columns: 1fr 1fr;
             gap: 12px;
@@ -288,34 +317,49 @@
 }
 .promo-block {
     min-height: 450px;
+    display: flex;
+    flex-direction: column;
     background: var(--green-color-light);
     position: relative;
     overflow: hidden;
+    .container {
+        flex: 1 1 auto;
+        display: flex;
+        flex-direction: column;
+    }
     .social-list {
         margin-top: 24px;
     }
-    &:after {
-        content: "";
-        width: 50%;
-        height: 100%;
-        background: url(../img/svg/gradient.svg) center/cover no-repeat;
-        position: absolute;
-        top: 50%;
-        right: 50%;
-        transform: translate(100%, -50%);
-    }
     &__img {
-        position: absolute;
-        top: 47%;
-        right: 50%;
-        transform: translate(100%, -50%);
+        position: relative;
+        &:before {
+            content: "";
+            width: 100%;
+            height: 200%;
+            background: url(../img/svg/gradient.svg) center/contain no-repeat;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
     }
     &__content {
         max-width: 45%;
+        flex: 1 1 auto;
         padding: 38px 0;
-        h1 {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        position: relative;
+        z-index: 1;
+        h1,
+        .h1 {
             color: var(--green-color);
             margin-bottom: 20px;
+        }
+        p {
+            font-size: 20px;
         }
     }
     &__date {
@@ -323,16 +367,46 @@
         font-weight: 400;
         margin-bottom: 16px;
     }
-    @media (max-width:$bp1) {
+    @media (max-width: $bp1) {
         min-height: 372px;
         .social-list {
             margin-top: 20px;
         }
         &__content {
+            max-width: 50%;
             padding: 56px 0;
-            h1 {
+            h1,
+            .h1 {
                 margin-bottom: 12px;
             }
+            p {
+                font-size: 16px;
+            }
+        }
+    }
+    @media (max-width: $bp2) {
+        &__content {
+            max-width: 67%;
+            padding: 25px 0;
+            h1,
+            .h1 {
+                margin-bottom: 8px;
+            }
+        }
+    }
+    @media (min-width: $bp4) {
+        &__img {
+            position: absolute;
+            top: 47%;
+            right: 50%;
+            transform: translate(100%, -50%);
+        }
+    }
+    @media (max-width: $bp4) {
+        min-height: 0!important;
+        flex-direction: column-reverse;
+        &__content {
+            max-width: 100%!important;
         }
     }
 }
