--- a/#src/scss/about.scss
+++ b/#src/scss/about.scss
@@ -336,12 +336,15 @@
     border-radius: 20px;
     border: 1px solid var(--border-color-green);
     background: var(--green-color-light);
+    h3 {
+        margin-bottom: 20px;
+    }
     .main-btn {
         width: 100%;
     }
     .form {
-        &__items {
-            margin-top: 20px;
+        &__group {
+            margin-bottom: 12px;
         }
         &__footer {
             margin-top: 20px;
