--- a/#src/scss/profile.scss
+++ b/#src/scss/profile.scss
@@ -465,18 +465,6 @@
             }
         }
     }
-    &__noLogged {
-        padding: 20px;
-        display: grid;
-        grid-template-columns: 1fr auto;
-        align-items: start;
-        gap: 12px;
-        border-radius: 20px;
-        background: var(--gray-color-light);
-        p {
-            align-self: center;
-        }
-    }
     @media (max-width: $bp1) {
         &__wrapper {
             padding: 20px 24px;
@@ -493,10 +481,6 @@
         }
         &__col {
             padding: 20px 24px;
-            border-radius: 16px;
-        }
-        &__noLogged {
-            padding: 20px 16px;
             border-radius: 16px;
         }
     }
@@ -538,8 +522,28 @@
         &__cols {
             grid-template-columns: 1fr;
         }
-        &__noLogged {
-            grid-template-columns: 1fr;
-        }
+    }
+}
+.profile-noLogged {
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: start;
+    gap: 12px;
+    border-radius: 20px;
+    background: var(--gray-color-light);
+    margin-bottom: 20px;
+    &:last-child {
+        margin-bottom: 0;
+    }
+    p {
+        align-self: center;
+    }
+    @media (max-width: $bp1) {
+        padding: 20px 16px;
+        border-radius: 16px;
+    }
+    @media (max-width: $bp4) {
+        grid-template-columns: 1fr;
     }
 }
