--- a/lescraft/css/style.css
+++ b/lescraft/css/style.css
@@ -1518,14 +1518,17 @@ p a:hover {
 }
 
 .file-form__info {
-  margin-bottom: 8px;
-}
-
-.file-form__info span {
   font-size: 14px;
   font-weight: 400;
   color: var(--gray-color);
-  display: block;
+  margin-bottom: 8px;
+}
+
+.file-form__info-desc {
+  font-weight: 500;
+  color: var(--black);
+  max-width: 542px;
+  margin-bottom: 8px;
 }
 
 .file-form__items {
@@ -3545,9 +3548,10 @@ p a:hover {
   margin-left: 12px;
 }
 
-.pagination .nav-btn.disabled,
-.pagination .nav-btn:disabled {
-  display: none;
+.pagination .nav-btn.disabled svg,
+.pagination .nav-btn:disabled svg {
+  opacity: 0.4;
+  pointer-events: none;
 }
 
 .pagination__link,
@@ -6075,12 +6079,16 @@ p a:hover {
   background: var(--green-color-light);
 }
 
+.feedback-form h3 {
+  margin-bottom: 20px;
+}
+
 .feedback-form .main-btn {
   width: 100%;
 }
 
-.feedback-form .form__items {
-  margin-top: 20px;
+.feedback-form .form__group {
+  margin-bottom: 12px;
 }
 
 .feedback-form .form__footer {
@@ -6260,6 +6268,10 @@ p a:hover {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 40px 20px;
+}
+
+.article-p .page-row__content .nav-anchors {
+  display: none;
 }
 
 .article-p .sec-top {
@@ -6992,6 +7004,11 @@ p a:hover {
 
 .cart-p__sec:last-child {
   margin-bottom: 0;
+}
+
+.cart-p .profile-noLogged,
+.order-p .profile-noLogged {
+  max-width: calc(75.9% - 40px);
 }
 
 .cart-p .page-row__aside,
@@ -7764,7 +7781,6 @@ p a:hover {
   overflow: auto;
   -webkit-transition: all 0.3s 0.1s ease-out;
   transition: all 0.3s 0.1s ease-out;
-  pointer-events: none !important;
 }
 
 .modal.open {
@@ -7772,7 +7788,6 @@ p a:hover {
   opacity: 1;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
-  pointer-events: all !important;
 }
 
 .modal.open .modal {
@@ -8013,6 +8028,14 @@ p a:hover {
 
 .log-modal__forget-password {
   text-align: right;
+}
+
+.address-modal {
+  pointer-events: none !important;
+}
+
+.address-modal.open {
+  pointer-events: all !important;
 }
 
 .address-modal .modal__content {
@@ -8744,7 +8767,7 @@ p a:hover {
   font-weight: 400;
 }
 
-.profile-p__noLogged {
+.profile-noLogged {
   padding: 20px;
   display: grid;
   grid-template-columns: 1fr auto;
@@ -8754,9 +8777,14 @@ p a:hover {
   gap: 12px;
   border-radius: 20px;
   background: var(--gray-color-light);
+  margin-bottom: 20px;
 }
 
-.profile-p__noLogged p {
+.profile-noLogged:last-child {
+  margin-bottom: 0;
+}
+
+.profile-noLogged p {
   -ms-flex-item-align: center;
   align-self: center;
 }
@@ -9340,6 +9368,13 @@ p a:hover {
 
   .tippy-content {
     max-width: 330px;
+  }
+}
+
+@media ((min-width: 1700.98px)) {
+  .file-form__info-desc {
+    font-size: 16px;
+    max-width: 820px;
   }
 }
 
@@ -10940,6 +10975,11 @@ p a:hover {
     margin-top: 24px;
   }
 
+  .cart-p .profile-noLogged,
+  .order-p .profile-noLogged {
+    max-width: calc(72.5% - 20px);
+  }
+
   .cart-p .page-row__aside,
   .order-p .page-row__aside {
     -webkit-box-flex: 0;
@@ -11439,7 +11479,7 @@ p a:hover {
     border-radius: 16px;
   }
 
-  .profile-p__noLogged {
+  .profile-noLogged {
     padding: 20px 16px;
     border-radius: 16px;
   }
@@ -11641,6 +11681,10 @@ p a:hover {
 
   .file-form__items::before {
     font-size: 14px;
+  }
+
+  .file-form__info-desc {
+    max-width: 100%;
   }
 
   .item-toggle {
@@ -12442,8 +12486,13 @@ p a:hover {
     max-width: 100%;
   }
 
-  .article-p .nav-anchors {
+  .article-p .page-row__aside .nav-anchors {
     display: none;
+  }
+
+  .article-p .page-row__content .nav-anchors {
+    display: block;
+    margin-bottom: 16px;
   }
 
   .news-banner__content {
@@ -12511,6 +12560,11 @@ p a:hover {
 
   .cart-p__sec {
     margin-bottom: 48px;
+  }
+
+  .cart-p .profile-noLogged,
+  .order-p .profile-noLogged {
+    max-width: 100%;
   }
 
   .service-p__nav {
@@ -15113,7 +15167,7 @@ p a:hover {
     grid-template-columns: 1fr;
   }
 
-  .profile-p__noLogged {
+  .profile-noLogged {
     grid-template-columns: 1fr;
   }
 
