udalit calc v catalog

--- a/#src/scss/profile.scss
+++ b/#src/scss/profile.scss
@@ -524,6 +524,7 @@
         }
         &__col-wrapper {
             .stroke-btn {
+                margin-top: 16px;
                 margin-bottom: 12px;
             }
         }
